// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.override() invalid name 1`] = `"Invalid \`name\` given to prometheusMetricsConsumer.override. \\"name\\" must only contain alpha-numeric and underscore characters"`;

exports[`.override() invalid type 1`] = `
"Invalid \`config\` object given to prometheusMetricsConsumer.override. {
  \\"type\\" [31m[1][0m: \\"not allowed type\\"
}
[31m
[1] \\"type\\" must be one of [counter, histogram, gauge, summary][0m"
`;

exports[`.override() missing name 1`] = `"Invalid \`name\` given to prometheusMetricsConsumer.override. \\"name\\" is required"`;

exports[`.override() sets a counter with custom labels 1`] = `
Counter {
  "aggregator": "sum",
  "hashMap": Object {
    "": Object {
      "labels": Object {},
      "timestamp": undefined,
      "value": 1,
    },
  },
  "help": ".",
  "labelNames": Array [],
  "name": "custom_label_counter",
}
`;

exports[`.override() sets a histogram with custom labels 1`] = `
Histogram {
  "aggregator": "sum",
  "bucketValues": Object {
    "0.001": 0,
    "0.0012": 0,
    "0.0013": 0,
    "0.0015": 0,
    "0.0017": 0,
    "0.002": 0,
    "0.0023": 0,
    "0.0027": 0,
    "0.0031": 0,
    "0.0035": 0,
    "0.004": 0,
    "0.0047": 0,
    "0.0054": 0,
    "0.0062": 0,
    "0.0071": 0,
    "0.0081": 0,
    "0.0094": 0,
    "0.0108": 0,
    "0.0124": 0,
    "0.0142": 0,
    "0.0164": 0,
    "0.0188": 0,
    "0.0216": 0,
    "0.0249": 0,
    "0.0286": 0,
    "0.0329": 0,
    "0.0379": 0,
    "0.0435": 0,
    "0.0501": 0,
    "0.0576": 0,
    "0.0662": 0,
    "0.0761": 0,
    "0.0876": 0,
    "0.1007": 0,
    "0.1158": 0,
    "0.1332": 0,
    "0.1532": 0,
    "0.1761": 0,
    "0.2025": 0,
    "0.2329": 0,
    "0.2679": 0,
    "0.308": 0,
    "0.3542": 0,
    "0.4074": 0,
    "0.4685": 0,
    "Infinity": 0,
  },
  "count": 0,
  "hashMap": Object {
    "": Object {
      "bucketValues": Object {
        "0.001": 0,
        "0.0012": 0,
        "0.0013": 0,
        "0.0015": 0,
        "0.0017": 0,
        "0.002": 0,
        "0.0023": 0,
        "0.0027": 0,
        "0.0031": 0,
        "0.0035": 0,
        "0.004": 0,
        "0.0047": 0,
        "0.0054": 0,
        "0.0062": 0,
        "0.0071": 0,
        "0.0081": 0,
        "0.0094": 0,
        "0.0108": 0,
        "0.0124": 0,
        "0.0142": 0,
        "0.0164": 0,
        "0.0188": 0,
        "0.0216": 0,
        "0.0249": 0,
        "0.0286": 0,
        "0.0329": 0,
        "0.0379": 0,
        "0.0435": 0,
        "0.0501": 0,
        "0.0576": 0,
        "0.0662": 0,
        "0.0761": 0,
        "0.0876": 0,
        "0.1007": 0,
        "0.1158": 0,
        "0.1332": 0,
        "0.1532": 0,
        "0.1761": 0,
        "0.2025": 0,
        "0.2329": 0,
        "0.2679": 0,
        "0.308": 0,
        "0.3542": 0,
        "0.4074": 0,
        "0.4685": 0,
        "Infinity": 1,
      },
      "count": 1,
      "labels": Object {},
      "sum": 12324,
    },
  },
  "help": ".",
  "labelNames": Array [],
  "name": "custom_label_histogram",
  "sum": 0,
  "upperBounds": Array [
    0.001,
    0.0012,
    0.0013,
    0.0015,
    0.0017,
    0.002,
    0.0023,
    0.0027,
    0.0031,
    0.0035,
    0.004,
    0.0047,
    0.0054,
    0.0062,
    0.0071,
    0.0081,
    0.0094,
    0.0108,
    0.0124,
    0.0142,
    0.0164,
    0.0188,
    0.0216,
    0.0249,
    0.0286,
    0.0329,
    0.0379,
    0.0435,
    0.0501,
    0.0576,
    0.0662,
    0.0761,
    0.0876,
    0.1007,
    0.1158,
    0.1332,
    0.1532,
    0.1761,
    0.2025,
    0.2329,
    0.2679,
    0.308,
    0.3542,
    0.4074,
    0.4685,
    Infinity,
  ],
}
`;

exports[`.override() sets a metric to be \`histogram\` but received metric is not valid for histogram type 1`] = `"Attempted to plot metric \\"bad_histogram\\" on a histogram, however metric was missing \`time\` value"`;

exports[`.override() sets a metric to be a counter 1`] = `
Counter {
  "aggregator": "sum",
  "hashMap": Object {
    "": Object {
      "labels": Object {},
      "timestamp": undefined,
      "value": 1,
    },
  },
  "help": ".",
  "labelNames": Array [],
  "name": "valid_name",
}
`;

exports[`.override() sets a metric to be a histogram with specific buckets 1`] = `
Histogram {
  "aggregator": "sum",
  "bucketValues": Object {
    "1": 0,
    "128": 0,
    "16": 0,
    "2": 0,
    "32": 0,
    "4": 0,
    "64": 0,
    "8": 0,
    "Infinity": 0,
  },
  "count": 0,
  "hashMap": Object {
    "": Object {
      "bucketValues": Object {
        "1": 0,
        "128": 0,
        "16": 0,
        "2": 0,
        "32": 0,
        "4": 0,
        "64": 0,
        "8": 0,
        "Infinity": 1,
      },
      "count": 1,
      "labels": Object {},
      "sum": 12345,
    },
  },
  "help": ".",
  "labelNames": Array [],
  "name": "overridden_histogram",
  "sum": 0,
  "upperBounds": Array [
    1,
    2,
    4,
    8,
    16,
    32,
    64,
    128,
    Infinity,
  ],
}
`;

exports[`gauge metrics interpreted as counters 1`] = `
Gauge {
  "aggregator": "sum",
  "hashMap": Object {
    "": Object {
      "labels": Object {},
      "timestamp": undefined,
      "value": 8,
    },
  },
  "help": ".",
  "labelNames": Array [],
  "name": "my_gauge",
}
`;

exports[`metrics interpreted as a counter 1`] = `
Counter {
  "aggregator": "sum",
  "hashMap": Object {
    "": Object {
      "labels": Object {},
      "timestamp": undefined,
      "value": 3,
    },
  },
  "help": ".",
  "labelNames": Array [],
  "name": "my_counter",
}
`;

exports[`metrics interpreted as a histogram 1`] = `
Histogram {
  "aggregator": "sum",
  "bucketValues": Object {
    "0.001": 0,
    "0.0012": 0,
    "0.0013": 0,
    "0.0015": 0,
    "0.0017": 0,
    "0.002": 0,
    "0.0023": 0,
    "0.0027": 0,
    "0.0031": 0,
    "0.0035": 0,
    "0.004": 0,
    "0.0047": 0,
    "0.0054": 0,
    "0.0062": 0,
    "0.0071": 0,
    "0.0081": 0,
    "0.0094": 0,
    "0.0108": 0,
    "0.0124": 0,
    "0.0142": 0,
    "0.0164": 0,
    "0.0188": 0,
    "0.0216": 0,
    "0.0249": 0,
    "0.0286": 0,
    "0.0329": 0,
    "0.0379": 0,
    "0.0435": 0,
    "0.0501": 0,
    "0.0576": 0,
    "0.0662": 0,
    "0.0761": 0,
    "0.0876": 0,
    "0.1007": 0,
    "0.1158": 0,
    "0.1332": 0,
    "0.1532": 0,
    "0.1761": 0,
    "0.2025": 0,
    "0.2329": 0,
    "0.2679": 0,
    "0.308": 0,
    "0.3542": 0,
    "0.4074": 0,
    "0.4685": 0,
    "Infinity": 0,
  },
  "count": 0,
  "hashMap": Object {
    "": Object {
      "bucketValues": Object {
        "0.001": 0,
        "0.0012": 0,
        "0.0013": 0,
        "0.0015": 0,
        "0.0017": 0,
        "0.002": 0,
        "0.0023": 0,
        "0.0027": 0,
        "0.0031": 0,
        "0.0035": 0,
        "0.004": 0,
        "0.0047": 0,
        "0.0054": 0,
        "0.0062": 0,
        "0.0071": 0,
        "0.0081": 0,
        "0.0094": 0,
        "0.0108": 0,
        "0.0124": 0,
        "0.0142": 0,
        "0.0164": 0,
        "0.0188": 0,
        "0.0216": 0,
        "0.0249": 0,
        "0.0286": 0,
        "0.0329": 0,
        "0.0379": 0,
        "0.0435": 0,
        "0.0501": 0,
        "0.0576": 0,
        "0.0662": 0,
        "0.0761": 0,
        "0.0876": 0,
        "0.1007": 2,
        "0.1158": 0,
        "0.1332": 0,
        "0.1532": 0,
        "0.1761": 0,
        "0.2025": 2,
        "0.2329": 0,
        "0.2679": 0,
        "0.308": 1,
        "0.3542": 0,
        "0.4074": 0,
        "0.4685": 0,
        "Infinity": 1,
      },
      "count": 6,
      "labels": Object {},
      "sum": 1.7999999999999998,
    },
  },
  "help": ".",
  "labelNames": Array [],
  "name": "my_histogram",
  "sum": 0,
  "upperBounds": Array [
    0.001,
    0.0012,
    0.0013,
    0.0015,
    0.0017,
    0.002,
    0.0023,
    0.0027,
    0.0031,
    0.0035,
    0.004,
    0.0047,
    0.0054,
    0.0062,
    0.0071,
    0.0081,
    0.0094,
    0.0108,
    0.0124,
    0.0142,
    0.0164,
    0.0188,
    0.0216,
    0.0249,
    0.0286,
    0.0329,
    0.0379,
    0.0435,
    0.0501,
    0.0576,
    0.0662,
    0.0761,
    0.0876,
    0.1007,
    0.1158,
    0.1332,
    0.1532,
    0.1761,
    0.2025,
    0.2329,
    0.2679,
    0.308,
    0.3542,
    0.4074,
    0.4685,
    Infinity,
  ],
}
`;

exports[`metrics with labels 1`] = `
Counter {
  "aggregator": "sum",
  "hashMap": Object {
    "label1:one,label2:two": Object {
      "labels": Object {
        "label1": "one",
        "label2": "two",
      },
      "timestamp": undefined,
      "value": 1,
    },
  },
  "help": ".",
  "labelNames": Array [
    "label1",
    "label2",
  ],
  "name": "my_counter_with_labels",
}
`;

exports[`mixed metrics interpreted correctly 1`] = `
Object {
  "mixed_counter": Counter {
    "aggregator": "sum",
    "hashMap": Object {
      "": Object {
        "labels": Object {},
        "timestamp": undefined,
        "value": 3,
      },
    },
    "help": ".",
    "labelNames": Array [],
    "name": "mixed_counter",
  },
  "mixed_gauge": Gauge {
    "aggregator": "sum",
    "hashMap": Object {
      "": Object {
        "labels": Object {},
        "timestamp": undefined,
        "value": 10,
      },
    },
    "help": ".",
    "labelNames": Array [],
    "name": "mixed_gauge",
  },
  "mixed_histogram": Histogram {
    "aggregator": "sum",
    "bucketValues": Object {
      "0.001": 0,
      "0.0012": 0,
      "0.0013": 0,
      "0.0015": 0,
      "0.0017": 0,
      "0.002": 0,
      "0.0023": 0,
      "0.0027": 0,
      "0.0031": 0,
      "0.0035": 0,
      "0.004": 0,
      "0.0047": 0,
      "0.0054": 0,
      "0.0062": 0,
      "0.0071": 0,
      "0.0081": 0,
      "0.0094": 0,
      "0.0108": 0,
      "0.0124": 0,
      "0.0142": 0,
      "0.0164": 0,
      "0.0188": 0,
      "0.0216": 0,
      "0.0249": 0,
      "0.0286": 0,
      "0.0329": 0,
      "0.0379": 0,
      "0.0435": 0,
      "0.0501": 0,
      "0.0576": 0,
      "0.0662": 0,
      "0.0761": 0,
      "0.0876": 0,
      "0.1007": 0,
      "0.1158": 0,
      "0.1332": 0,
      "0.1532": 0,
      "0.1761": 0,
      "0.2025": 0,
      "0.2329": 0,
      "0.2679": 0,
      "0.308": 0,
      "0.3542": 0,
      "0.4074": 0,
      "0.4685": 0,
      "Infinity": 0,
    },
    "count": 0,
    "hashMap": Object {
      "": Object {
        "bucketValues": Object {
          "0.001": 0,
          "0.0012": 0,
          "0.0013": 0,
          "0.0015": 0,
          "0.0017": 0,
          "0.002": 0,
          "0.0023": 0,
          "0.0027": 0,
          "0.0031": 0,
          "0.0035": 0,
          "0.004": 0,
          "0.0047": 0,
          "0.0054": 0,
          "0.0062": 0,
          "0.0071": 0,
          "0.0081": 0,
          "0.0094": 0,
          "0.0108": 0,
          "0.0124": 0,
          "0.0142": 0,
          "0.0164": 0,
          "0.0188": 0,
          "0.0216": 0,
          "0.0249": 0,
          "0.0286": 0,
          "0.0329": 0,
          "0.0379": 0,
          "0.0435": 0,
          "0.0501": 0,
          "0.0576": 0,
          "0.0662": 0,
          "0.0761": 0,
          "0.0876": 0,
          "0.1007": 1,
          "0.1158": 0,
          "0.1332": 0,
          "0.1532": 0,
          "0.1761": 0,
          "0.2025": 2,
          "0.2329": 0,
          "0.2679": 0,
          "0.308": 0,
          "0.3542": 0,
          "0.4074": 0,
          "0.4685": 0,
          "Infinity": 0,
        },
        "count": 3,
        "labels": Object {},
        "sum": 0.5,
      },
    },
    "help": ".",
    "labelNames": Array [],
    "name": "mixed_histogram",
    "sum": 0,
    "upperBounds": Array [
      0.001,
      0.0012,
      0.0013,
      0.0015,
      0.0017,
      0.002,
      0.0023,
      0.0027,
      0.0031,
      0.0035,
      0.004,
      0.0047,
      0.0054,
      0.0062,
      0.0071,
      0.0081,
      0.0094,
      0.0108,
      0.0124,
      0.0142,
      0.0164,
      0.0188,
      0.0216,
      0.0249,
      0.0286,
      0.0329,
      0.0379,
      0.0435,
      0.0501,
      0.0576,
      0.0662,
      0.0761,
      0.0876,
      0.1007,
      0.1158,
      0.1332,
      0.1532,
      0.1761,
      0.2025,
      0.2329,
      0.2679,
      0.308,
      0.3542,
      0.4074,
      0.4685,
      Infinity,
    ],
  },
}
`;

exports[`time metrics overridden to be summaries 1`] = `
Object {
  "time_series": Summary {
    "aggregator": "sum",
    "hashMap": Object {
      "": Object {
        "count": 6,
        "labels": Object {},
        "sum": 56,
        "td": TDigest {
          "CX": 1.1,
          "K": 25,
          "centroids": TreeBase {
            "_comparator": [Function],
            "_root": Node {
              "data": Object {
                "cumn": 3,
                "mean": 10,
                "mean_cumn": 2,
                "n": 2,
              },
              "left": Node {
                "data": Object {
                  "cumn": 1,
                  "mean": 1,
                  "mean_cumn": 0.5,
                  "n": 1,
                },
                "left": null,
                "red": false,
                "right": null,
              },
              "red": false,
              "right": Node {
                "data": Object {
                  "cumn": 6,
                  "mean": 12,
                  "mean_cumn": 5,
                  "n": 2,
                },
                "left": Node {
                  "data": Object {
                    "cumn": 4,
                    "mean": 11,
                    "mean_cumn": 3.5,
                    "n": 1,
                  },
                  "left": null,
                  "red": true,
                  "right": null,
                },
                "red": false,
                "right": null,
              },
            },
            "size": 4,
          },
          "delta": 0.01,
          "discrete": false,
          "last_cumulate": 6,
          "n": 6,
          "nreset": 1,
        },
      },
    },
    "help": ".",
    "labelNames": Array [],
    "name": "time_series",
    "percentiles": Array [
      0.01,
      0.05,
      0.5,
      0.9,
      0.95,
      0.99,
      0.999,
    ],
  },
}
`;
